--- a/townboard-signage/style.css
+++ b/townboard-signage/style.css
@@ -92,6 +92,7 @@ body {
     background-color: #fff;
     padding: 8px;
     border-radius: 10px;
+    
     /* 2枚目の画像の青い影を再現 */
     box-shadow: 6px 6px 0px #A6DDF8; 
     margin-right: 10px;
@@ -142,7 +143,7 @@ body {
    ========================================= */
 .main-visual-section {
     display: flex;
-    height: 424px;
+    height: 434px;
     padding: 20px 59px 20px 9px;
     gap: 20px;
 }
@@ -164,12 +165,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px;
 }
 .side-movie-container video {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 
